--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <button class="add">Add band</button>
     <div class="app"></div>
     <template>
       <h1></h1>
