--- a/index.html
+++ b/index.html
@@ -4,16 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <button class="add">Add band</button>
+    <form>
+      <label for="bandname">
+        Band name
+        <input type="text" name="bandname" id="bandname" required />
+      </label>
+
+      <label for="genre">Music genre</label>
+      <input list="genres" id="genre" name="genre" />
+      <datalist id="genres">
+        <option value="Rock"> </option>
+        <option value="Punk"> </option>
+        <option value="Hip Hop"> </option>
+        <option value="Heavy metal"> </option>
+        <option value="Indie"> </option>
+        <option value="Alternative"> </option>
+        <option value="Classical music"> </option>
+      </datalist>
+
+      <label for="nr-of-members">
+        Number of members
+        <input type="number" name="nr-of-members" id="nr-of-members" />
+      </label>
+      <label for="song">
+        Song title
+        <input type="text" name="song" id="song" />
+      </label>
+
+      <button class="add">Add band</button>
+    </form>
     <div class="app"></div>
     <template>
-      <h1></h1>
-      <h2></h2>
-      <h3></h3>
-      <p></p>
+      <article>
+        <h1></h1>
+        <h2></h2>
+        <h3></h3>
+        <p></p>
+        <button class="delete">delete me</button>
+      </article>
     </template>
     <script src="index.js"></script>
   </body>
