post from he form

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
       <label for="nr-of-members">
         Number of members
-        <input type="number" name="nr-of-members" id="nr-of-members" />
+        <input type="number" name="nrofmembers" id="nr-of-members" />
       </label>
       <label for="song">
         Song title
         <input type="text" name="song" id="song" />
       </label>
 
-      <button class="add">Add band</button>
+      <input type="submit" name="submit" class="add" value="Add band" />
     </form>
     <div class="app"></div>
     <template>
